--- a/JackCompiler/HackCompiler.CLI/JackCompiler.CLI.csproj
+++ b/JackCompiler/HackCompiler.CLI/JackCompiler.CLI.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\JackCompiler.Lib\JackCompiler.Lib.csproj" />
+  </ItemGroup>
+
 </Project>
